force-app/main/default/objects/Case_Duration__c/Case_Duration__c.object-meta.xml
<CustomObject>
    <label>Case Duration</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Case Duration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>