force-app/main/default/objects/Case_Duration__c/fields/Business_Hours_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Age_Hours__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>Number of business hours that the case is opened</description>
    <label>Business Hours Age Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>