force-app/main/default/objects/Case_Duration__c/fields/Business_Hours_Age_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Age_Minutes__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <description>Number of business minutes that the case is opened</description>
    <label>Business Hours Age Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>