force-app/main/default/objects/Case_Duration__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>Represents the case that this duration object is tracking time for</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Durations</relationshipLabel>
    <relationshipName>Case_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>