force-app/main/default/objects/Case_Duration__c/fields/End_Status__c.field-meta.xml
<CustomField>
    <fullName>End_Status__c</fullName>
    <label>End Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>