force-app/main/default/objects/Case_Duration__c/fields/Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <label>Initial Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>