force-app/main/default/objects/Case_Duration__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <complianceGroup>Source_Salesforce;Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To identify whether a close is closed.</description>
    <label>isClosed</label>
    <type>Checkbox</type>
</CustomField>