force-app/main/default/objects/Case_Duration__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <complianceGroup>Integrity - Trusted</complianceGroup>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>